--- a/data/apps.json
+++ b/data/apps.json
@@ -4,69 +4,69 @@
         "category": "File Management",
         "description": "Beautiful and modern file manager for iOS 14+",
         "download": "[Download](https://nightly.link/SerenaKit/Santander/workflows/build/main/SantanderTS.zip)",
-        "install": "-"
+        "direct": "-"
     },
     {
         "name": "Filza",
         "category": "File Management",
         "description": "File manager with root helper, so you can modify all of /var",
         "download": "[Download](https://www.tigisoftware.com/default/?p=439)",
-        "install": "[Install](apple-magnifier://install?url=https://tigisoftware.com/download/Filza_NoURLScheme_3.9.8.ipa)"
+        "direct": "[Direct](https://tigisoftware.com/download/Filza_NoURLScheme_3.9.8.ipa)"
     },
     {
         "name": "AppStore++",
         "category": "Utilities",
         "description": "Downgrade App Store apps",
         "download": "[Download](https://github.com/CokePokes/AppStorePlus-TrollStore/releases)",
-        "install": "[Install](apple-magnifier://install?url=https://github.com/CokePokes/AppStorePlus-TrollStore/releases/download/v1.2-1/AppStore++_TrollStore_v1.0.3-2.ipa)"
+        "direct": "[Direct](https://github.com/CokePokes/AppStorePlus-TrollStore/releases/download/v1.2-1/AppStore++_TrollStore_v1.0.3-2.ipa)"
     },
     {
         "name": "PojavLauncher",
         "category": "Games",
         "description": "Minecraft java on iOS with JIT",
         "download": "[Download](https://nightly.link/PojavLauncherTeam/PojavLauncher_iOS/workflows/development/main/net.kdt.pojavlauncher.ipa.zip)",
-        "install": "-"
+        "direct": "-"
     },
     {
         "name": "TrollNonce",
         "category": "Utilities",
         "description": "Set your nonce to downgrade with FutureRestore",
         "download": "[Download](https://github.com/opa334/TrollNonce/releases)",
-        "install": "[Install](apple-magnifier://install?url=https://github.com/opa334/TrollNonce/releases/latest/download/TrollNonce.tipa)"
+        "direct": "[Direct](https://github.com/opa334/TrollNonce/releases/latest/download/TrollNonce.tipa)"
     },
     {
         "name": "TrollTools",
         "category": "Customization",
         "description": "All-in-one customization tool",
         "download": "[Download](https://github.com/sourcelocation/TrollTools/releases)",
-        "install": "[Install](apple-magnifier://install?url=https://github.com/sourcelocation/TrollTools/releases/download/2.1.2/TrollTools-2.1.2.tipa)"
+        "direct": "[Direct](https://github.com/sourcelocation/TrollTools/releases/download/2.1.2/TrollTools-2.1.2.tipa)"
     },
     {
         "name": "Apps Manager",
         "category": "Utilities",
         "description": "Wipe and backup apps",
         "download": "[Download](https://www.tigisoftware.com/default/?p=435)",
-        "install": "[Install](apple-magnifier://install?url=https://tigisoftware.com/download/AppsManager_1.7.0.ipa)"
+        "direct": "[Direct](https://tigisoftware.com/download/AppsManager_1.7.0.ipa)"
     },
     {
         "name": "Legizmo",
         "category": "Utilities",
         "description": "Pair unsupported Apple Watches",
         "download": "[Download](https://www.patreon.com/lunotech11)",
-        "install": "-"
+        "direct": "-"
     },
     {
         "name": "Cardio",
         "category": "Customization",
         "description": "Change Apple Pay card images",
         "download": "[Download](https://github.com/cisc0disco/Cardio/releases)",
-        "install": "[Install](apple-magnifier://install?url=https://github.com/cisc0disco/Cardio/releases/latest/download/Cardio.ipa)"
+        "direct": "[Direct](https://github.com/cisc0disco/Cardio/releases/latest/download/Cardio.ipa)"
     },
     {
         "name": "JitterBug",
         "category": "Utilities",
         "description": "JIT with most TrollStore apps",
         "download": "[Download](https://github.com/osy/Jitterbug/releases)",
-        "install": "[Install](apple-magnifier://install?url=https://github.com/osy/Jitterbug/releases/latest/download/Jitterbug.ipa)"
+        "direct": "[Direct](https://github.com/osy/Jitterbug/releases/latest/download/Jitterbug.ipa)"
     }
 ]
