--- a/data/apps.json
+++ b/data/apps.json
@@ -39,7 +39,7 @@
         "category": "Customization",
         "description": "All-in-one customization tool",
         "download": "[Download](https://github.com/sourcelocation/TrollTools/releases)",
-        "direct": "[Direct](https://github.com/sourcelocation/TrollTools/releases/download/2.1.2/TrollTools-2.1.2.tipa)"
+        "direct": "[Direct](https://github.com/sourcelocation/TrollTools/releases/download/3.0/TrollTools.tipa)"
     },
     {
         "name": "Apps Manager",
